--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -55,7 +55,7 @@ html {
                 align-content: center;
                 align-self: center;
 
-                li>a {
+                li > a {
                     display: block;
                     color: $light;
                     font-weight: 100;
@@ -95,18 +95,40 @@ html {
                 }
 
                 @keyframes shake {
-                    0% { transform: translate(1px, 1px) rotate(0deg); }
-                    10% { transform: translate(-1px, -2px) rotate(-1deg); }
-                    20% { transform: translate(-3px, 0px) rotate(1deg); }
-                    30% { transform: translate(3px, 2px) rotate(0deg); }
-                    40% { transform: translate(1px, -1px) rotate(1deg); }
-                    50% { transform: translate(-1px, 2px) rotate(-1deg); }
-                    60% { transform: translate(-3px, 1px) rotate(0deg); }
-                    70% { transform: translate(3px, 1px) rotate(-1deg); }
-                    80% { transform: translate(-1px, -1px) rotate(1deg); }
-                    90% { transform: translate(1px, 2px) rotate(0deg); }
-                    100% { transform: translate(1px, -2px) rotate(-1deg); }
-                  }
+                    0% {
+                        transform: translate(1px, 1px) rotate(0deg);
+                    }
+                    10% {
+                        transform: translate(-1px, -2px) rotate(-1deg);
+                    }
+                    20% {
+                        transform: translate(-3px, 0px) rotate(1deg);
+                    }
+                    30% {
+                        transform: translate(3px, 2px) rotate(0deg);
+                    }
+                    40% {
+                        transform: translate(1px, -1px) rotate(1deg);
+                    }
+                    50% {
+                        transform: translate(-1px, 2px) rotate(-1deg);
+                    }
+                    60% {
+                        transform: translate(-3px, 1px) rotate(0deg);
+                    }
+                    70% {
+                        transform: translate(3px, 1px) rotate(-1deg);
+                    }
+                    80% {
+                        transform: translate(-1px, -1px) rotate(1deg);
+                    }
+                    90% {
+                        transform: translate(1px, 2px) rotate(0deg);
+                    }
+                    100% {
+                        transform: translate(1px, -2px) rotate(-1deg);
+                    }
+                }
             }
 
             section {
@@ -140,7 +162,7 @@ html {
                     border: unset !important;
                     border-radius: 50%;
 
-                    a>img {
+                    a > img {
                         border-radius: 50%;
                         border: 1px solid $light;
                         height: 2rem;
@@ -405,12 +427,20 @@ html {
                     color: $blueDarkest;
                 }
 
-                h2.sub-section-header {
+                .sub-section-header {
                     display: block;
                     text-align: center;
-                    text-decoration: underline;
-                    font-size: 2rem;
-                    font-weight: 500;
+                    font-size: 2.5rem;
+                    font-weight: 900;
+                    line-height: 0;
+                    margin-top: 4rem;
+                }
+
+                @media (max-width: 480px) {
+                    .sub-section-header {
+                        font-size: 2rem;
+                        margin-top: 3rem;
+                    }
                 }
 
                 .card {
@@ -535,7 +565,7 @@ html {
                 .links {
                     align-self: center;
 
-                    button>a>img {
+                    button > a > img {
                         background-color: $orangeDarkest;
                         border: unset;
                     }
