--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -29,12 +29,31 @@ $orangeDarkest: #870000;
     transform: scale(1.01);
 }
 
+.noselect {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+.select {
+    -webkit-touch-callout: text;
+    -webkit-user-select: text;
+    -khtml-user-select: text;
+    -moz-user-select: text;
+    -ms-user-select: text;
+    user-select: text;
+}
+
 html {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
         "Helvetica Neue", sans-serif;
     scroll-behavior: smooth;
 
     body {
+        @extend .noselect;
         margin: 0;
         padding: 0;
 
@@ -612,6 +631,7 @@ html {
                         }
 
                         .content-value {
+                            @extend .select;
                             a {
                                 text-decoration: none;
                                 color: unset;
