added projects deck

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -1,5 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Mono&family=Roboto+Slab:wght@500&display=swap");
 
+// Colors
+
 $lightGrey: #e0e0e0;
 $darkestGrey: #252525;
 $darkGrey1: #303030;
@@ -23,6 +25,8 @@ $blueDarkest: #002171;
 $orangeLightest: #fbe9e7;
 $orangeLight: #ffccbc;
 $orangeDarkest: #870000;
+
+// Colors End
 
 .card-hover-effect {
     box-shadow: 1px 1px 4px $lightGrey;
@@ -64,6 +68,10 @@ html {
             background-color: $darkGrey1;
             box-shadow: 0 0 0.1rem black;
 
+            @media (max-width: 479px) {
+                display: none;
+            }
+
             ul {
                 list-style-type: none;
                 margin: 0;
@@ -93,12 +101,6 @@ html {
                         font-weight: 400;
                     }
                 }
-            }
-        }
-
-        @media (max-width: 479px) {
-            nav {
-                display: none;
             }
         }
 
@@ -153,16 +155,12 @@ html {
             section {
                 padding: 2rem;
                 color: $darkGrey1;
-            }
 
-            @media (max-width: 768px) {
-                section {
+                @media (max-width: 768px) {
                     padding: 1rem;
                 }
-            }
 
-            @media (max-width: 480px) {
-                section {
+                @media (max-width: 480px) {
                     padding: 0.5rem;
 
                     .section-header {
@@ -200,6 +198,9 @@ html {
             #intro {
                 padding: 0;
                 background-color: $darkGrey1;
+                @media (max-width: 768px) {
+                    height: 100vh;
+                }
 
                 #intro-particles {
                     canvas {
@@ -226,6 +227,10 @@ html {
                         width: 8rem;
                         border-radius: 50%;
                         border: 1px solid $light;
+                        @media (max-width: 768px) {
+                            height: 20vw;
+                            width: 20vw;
+                        }
 
                         &:hover {
                             transform: scale(1.01) rotate(2deg);
@@ -241,27 +246,18 @@ html {
                         margin-bottom: 3rem;
                         font-family: "Roboto Slab", sans-serif;
                         text-transform: uppercase;
+                        @media (max-width: 768px) {
+                            font-size: 10vw;
+                            margin-top: 6vw;
+                            margin-bottom: 6vw;
+                        }
                     }
 
                     #short-desc {
                         font-size: 1.5rem;
                         font-family: "Roboto Mono";
-                    }
-
-                    @media (max-width: 768px) {
-                        #name {
-                            font-size: 10vw;
-                            margin-top: 6vw;
-                            margin-bottom: 6vw;
-                        }
-
-                        #short-desc {
+                        @media (max-width: 768px) {
                             font-size: 4vw;
-                        }
-
-                        #avatar {
-                            height: 20vw;
-                            width: 20vw;
                         }
                     }
 
@@ -300,12 +296,6 @@ html {
                 }
             }
 
-            @media (max-width: 768px) {
-                #intro {
-                    height: 100vh;
-                }
-            }
-
             #projects {
                 background-color: $greenLightest;
 
@@ -316,42 +306,105 @@ html {
                 .card-deck {
                     padding: 0;
                     display: grid;
-                    grid-template-columns: 1fr 1fr;
+                    grid-template-columns: 1fr 1fr 1fr 1fr;
                     grid-gap: 1rem;
 
-                    .card {
-                        display: grid;
-                        grid-template-columns: 10rem auto;
-                        padding: 2rem;
-                        border-radius: 0.5rem;
-                        background-color: $greenLight;
+                    align-items: center;
+                    justify-items: center;
 
-                        &:hover {
-                            @extend .card-hover-effect;
-                        }
-
-                        .project-image {
-                            height: 8rem;
-                            width: 8rem;
-                            border-radius: 0.5rem;
-                        }
-
-                        .project-description {
-                            justify-content: flex-start;
-                        }
+                    @media (max-width: 1080px) {
+                        grid-template-columns: 1fr 1fr 1fr;
                     }
 
                     @media (max-width: 768px) {
-                        .card {
-                            grid-template-columns: 1fr;
-                            padding: 1rem;
+                        grid-template-columns: 1fr 1fr;
+                    }
+
+                    @media (max-width: 480px) {
+                        grid-template-columns: 1fr;
+                    }
+
+                    .flip-card {
+                        background-color: transparent;
+                        border-radius: 0.5rem;
+                        border: 1px solid $greenLight;
+                        perspective: 100rem; /* Remove this if you don't want the 3D effect */
+
+                        .flip-card-inner {
+                            position: relative;
+                            width: 100%;
+                            height: 100%;
+                            text-align: center;
+                            transition: transform 0.8s;
+                            transform-style: preserve-3d;
+
+                            .flip-card-front,
+                            .flip-card-back {
+                                position: absolute;
+                                width: 100%;
+                                height: 100%;
+                                -webkit-backface-visibility: hidden;
+                                -moz-backface-visibility: hidden;
+                                backface-visibility: hidden;
+                            }
+
+                            .flip-card-front {
+                                background-color: #bbb;
+                                color: black;
+                            }
+
+                            .flip-card-back {
+                                padding: 0.5rem;
+                                background-color: dodgerblue;
+                                color: white;
+                                transform: rotateY(180deg);
+
+                                p {
+                                    text-align: justify;
+                                    font-weight: 300;
+                                }
+
+                                ul.tags {
+                                    margin: 0;
+                                    padding: 0;
+                                    list-style: none;
+                                    display: block;
+
+                                    li {
+                                        display: inline;
+                                        background-color: $blueDarkest;
+                                        color: $blueLightest;
+                                        font-size: x-small;
+                                        padding: 0.2rem 0.5rem;
+                                        border-radius: 0.5rem;
+                                    }
+                                }
+                            }
+                        }
+
+                        &:hover .flip-card-inner {
+                            transform: rotateY(180deg);
                         }
                     }
-                }
 
-                @media (max-width: 1080px) {
-                    .card-deck {
-                        grid-template-columns: 1fr;
+                    .flip-card,
+                    .flip-card-inner,
+                    .flip-card-front,
+                    .flip-card-front img,
+                    .flip-card-back {
+                        border-radius: 0.5rem;
+                        max-height: 20rem;
+                        max-width: 20rem;
+                        height: 18rem;
+                        width: 18rem;
+                        min-height: 15rem;
+                        min-width: 15rem;
+                    }
+
+                    .flip-card-front,
+                    .flip-card-back {
+                        height: 100%;
+                        width: 100%;
                     }
                 }
             }
@@ -372,6 +425,12 @@ html {
                     padding: 2rem;
                     z-index: 10;
                     position: relative;
+                    @media (max-width: 768px) {
+                        padding: 1rem;
+                    }
+                    @media (max-width: 480px) {
+                        padding: 0.5rem;
+                    }
 
                     .section-header {
                         color: $brownDarkest;
@@ -425,18 +484,6 @@ html {
                         }
                     }
                 }
-
-                @media (max-width: 768px) {
-                    .content {
-                        padding: 1rem;
-                    }
-                }
-
-                @media (max-width: 480px) {
-                    .content {
-                        padding: 0.5rem;
-                    }
-                }
             }
 
             #experience {
@@ -453,10 +500,7 @@ html {
                     font-weight: 900;
                     line-height: 0;
                     margin-top: 4rem;
-                }
-
-                @media (max-width: 480px) {
-                    .sub-section-header {
+                    @media (max-width: 480px) {
                         font-size: 2rem;
                         margin-top: 3rem;
                     }
@@ -466,6 +510,9 @@ html {
                     background-color: $blueLight;
                     border-radius: 0.5rem;
                     padding: 2rem;
+                    @media (max-width: 768px) {
+                        padding: 1rem;
+                    }
 
                     &:hover {
                         @extend .card-hover-effect;
@@ -519,12 +566,6 @@ html {
                         span {
                             font-size: 1rem;
                         }
-                    }
-                }
-
-                @media (max-width: 768px) {
-                    .card {
-                        padding: 1rem;
                     }
                 }
 
@@ -601,13 +642,21 @@ html {
                     justify-content: center;
                     align-content: flex-start;
 
+                    @media (max-width: 768px) {
+                        flex-direction: column;
+                        justify-content: center;
+                        align-content: flex-start;
+                    }
+
                     img {
                         margin: 0 1rem 1rem 1rem;
                         height: 15rem;
                         width: 15rem;
                         border-radius: 0.5rem;
                         justify-self: center;
-
+                        @media (max-width: 768px) {
+                            align-self: center;
+                        }
                         &:hover {
                             transform: scale(1.01) rotate(-1deg);
                             box-shadow: 1px 1px 0.5rem $orangeLight;
@@ -619,6 +668,11 @@ html {
                         display: flex;
                         flex-direction: column;
                         justify-content: center;
+                        @media (max-width: 768px) {
+                            justify-content: unset;
+                            text-align: center;
+                            align-content: center;
+                        }
 
                         .content-name {
                             font-size: large;
@@ -640,24 +694,6 @@ html {
                     }
                 }
 
-                @media (max-width: 768px) {
-                    .contact-container {
-                        flex-direction: column;
-                        justify-content: center;
-                        align-content: flex-start;
-
-                        img {
-                            align-self: center;
-                        }
-
-                        .content {
-                            justify-content: unset;
-                            text-align: center;
-                            align-content: center;
-                        }
-                    }
-                }
-
                 #footer-copyright {
                     text-align: center;
                     margin-top: 2rem;
@@ -667,25 +703,6 @@ html {
         }
     }
 }
-
-/* #particles {
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: 50% 50%;
-}
-
-#particles canvas {
-    display: block;
-    -webkit-transform: scale(1);
-    -ms-transform: scale(1);
-    transform: scale(1);
-    opacity: 1;
-    -webkit-transition: opacity .8s ease, -webkit-transform 1.4s ease;
-    transition: opacity .8s ease, transform 1.4s ease
-} */
 
 /* Width */
 ::-webkit-scrollbar {
