--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -51,6 +51,42 @@ $orangeDarkest: #870000;
     user-select: text;
 }
 
+@keyframes shake {
+    0% {
+        transform: translate(1px, 1px) rotate(0deg);
+    }
+    10% {
+        transform: translate(-1px, -2px) rotate(-1deg);
+    }
+    20% {
+        transform: translate(-3px, 0px) rotate(1deg);
+    }
+    30% {
+        transform: translate(3px, 2px) rotate(0deg);
+    }
+    40% {
+        transform: translate(1px, -1px) rotate(1deg);
+    }
+    50% {
+        transform: translate(-1px, 2px) rotate(-1deg);
+    }
+    60% {
+        transform: translate(-3px, 1px) rotate(0deg);
+    }
+    70% {
+        transform: translate(3px, 1px) rotate(-1deg);
+    }
+    80% {
+        transform: translate(-1px, -1px) rotate(1deg);
+    }
+    90% {
+        transform: translate(1px, 2px) rotate(0deg);
+    }
+    100% {
+        transform: translate(1px, -2px) rotate(-1deg);
+    }
+}
+
 html {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
         "Helvetica Neue", sans-serif;
@@ -113,42 +149,6 @@ html {
 
                 &:hover {
                     animation: shake 0.5s;
-                }
-
-                @keyframes shake {
-                    0% {
-                        transform: translate(1px, 1px) rotate(0deg);
-                    }
-                    10% {
-                        transform: translate(-1px, -2px) rotate(-1deg);
-                    }
-                    20% {
-                        transform: translate(-3px, 0px) rotate(1deg);
-                    }
-                    30% {
-                        transform: translate(3px, 2px) rotate(0deg);
-                    }
-                    40% {
-                        transform: translate(1px, -1px) rotate(1deg);
-                    }
-                    50% {
-                        transform: translate(-1px, 2px) rotate(-1deg);
-                    }
-                    60% {
-                        transform: translate(-3px, 1px) rotate(0deg);
-                    }
-                    70% {
-                        transform: translate(3px, 1px) rotate(-1deg);
-                    }
-                    80% {
-                        transform: translate(-1px, -1px) rotate(1deg);
-                    }
-                    90% {
-                        transform: translate(1px, 2px) rotate(0deg);
-                    }
-                    100% {
-                        transform: translate(1px, -2px) rotate(-1deg);
-                    }
                 }
             }
 
@@ -332,8 +332,6 @@ html {
 
                         .flip-card-inner {
                             position: relative;
-                            width: 100%;
-                            height: 100%;
                             text-align: center;
                             transition: transform 0.8s;
                             transform-style: preserve-3d;
@@ -341,42 +339,51 @@ html {
                             .flip-card-front,
                             .flip-card-back {
                                 position: absolute;
-                                width: 100%;
-                                height: 100%;
                                 -webkit-backface-visibility: hidden;
                                 -moz-backface-visibility: hidden;
                                 backface-visibility: hidden;
                             }
 
-                            .flip-card-front {
-                                background-color: #bbb;
-                                color: black;
-                            }
-
                             .flip-card-back {
-                                padding: 0.5rem;
-                                background-color: dodgerblue;
-                                color: white;
+                                background-color: $blueLight;
                                 transform: rotateY(180deg);
 
-                                p {
-                                    text-align: justify;
-                                    font-weight: 300;
-                                }
+                                .project-details {
+                                    padding: 0.5rem;
+                                    display: flex;
+                                    flex-direction: column;
+                                    justify-content: space-between;
 
-                                ul.tags {
-                                    margin: 0;
-                                    padding: 0;
-                                    list-style: none;
-                                    display: block;
+                                    h1 {
+                                        color: $blueDarkest;
+                                        font-size: 2rem;
+                                        line-height: 0;
+                                        &:hover {
+                                            animation: shake 0.5sec;
+                                        }
+                                    }
 
-                                    li {
-                                        display: inline;
-                                        background-color: $blueDarkest;
-                                        color: $blueLightest;
-                                        font-size: x-small;
-                                        padding: 0.2rem 0.5rem;
-                                        border-radius: 0.5rem;
+                                    p {
+                                        text-align: justify;
+                                        font-weight: 500;
+                                        font-size: 0.9rem;
+                                    }
+
+                                    ul.tags {
+                                        margin: 0;
+                                        padding: 0;
+                                        margin-bottom: 1rem !important;
+                                        list-style: none;
+                                        display: block;
+
+                                        li {
+                                            display: inline;
+                                            background-color: $blueDarkest;
+                                            color: $blueLightest;
+                                            font-size: x-small;
+                                            padding: 0.2rem 0.5rem;
+                                            border-radius: 0.7rem;
+                                        }
                                     }
                                 }
                             }
@@ -391,20 +398,11 @@ html {
                     .flip-card-inner,
                     .flip-card-front,
                     .flip-card-front img,
-                    .flip-card-back {
+                    .flip-card-back,
+                    .project-details {
                         border-radius: 0.5rem;
-                        max-height: 20rem;
-                        max-width: 20rem;
                         height: 18rem;
                         width: 18rem;
-                        min-height: 15rem;
-                        min-width: 15rem;
-                    }
-
-                    .flip-card-front,
-                    .flip-card-back {
-                        height: 100%;
-                        width: 100%;
                     }
                 }
             }
