fixed project card colors

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -363,8 +363,8 @@ html {
                             }
 
                             .flip-card-back {
-                                color: $blueDarkest;
-                                background-color: $blueLight;
+                                color: $greenDarkest;
+                                background-color: $greenLight;
                                 transform: rotateY(180deg);
 
                                 // padding: 0.5rem;
