--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -401,8 +401,8 @@ html {
 
                                     li {
                                         display: inline;
-                                        background-color: $blueDarkest;
-                                        color: $blueLightest;
+                                        background-color: $greenDarkest;
+                                        color: $greenLightest;
                                         font-family: 'Roboto Mono';
                                         font-size: 0.75rem;
                                         padding: 0.2rem 0.5rem;
