--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -98,7 +98,8 @@ $orangeDarkest: #870000;
 }
 
 html {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
+        "Helvetica Neue", sans-serif;
     scroll-behavior: smooth;
 
     body {
@@ -127,7 +128,7 @@ html {
                 align-content: center;
                 align-self: center;
 
-                li>a {
+                li > a {
                     display: block;
                     color: $light;
                     font-weight: 100;
@@ -188,7 +189,7 @@ html {
                     border: unset !important;
                     border-radius: 50%;
 
-                    a>img {
+                    a > img {
                         border-radius: 50%;
                         border: 1px solid $light;
                         height: 2rem;
@@ -197,8 +198,7 @@ html {
                         background-color: $darkestGrey;
 
                         &:hover {
-                            transform: scale(1.01);
-                            box-shadow: 1px 1px 0.5rem black;
+                            transform: scale(1.1);
                         }
                     }
                 }
@@ -376,6 +376,13 @@ html {
                                 a {
                                     text-decoration: none;
                                     color: unset;
+
+                                    small {
+                                        background-color: $greenDarkest;
+                                        color: $greenLight;
+                                        padding: 0.1rem 0.3rem 0.2rem 0.3rem;
+                                        border-radius: 0.2rem;
+                                    }
                                 }
 
                                 h1 {
@@ -408,7 +415,7 @@ html {
                                         display: inline;
                                         background-color: $greenDarkest;
                                         color: $greenLightest;
-                                        font-family: 'Roboto Mono';
+                                        font-family: "Roboto Mono";
                                         font-size: 0.75rem;
                                         padding: 0.2rem 0.5rem;
                                         margin: 0.1rem 0.1rem;
@@ -527,21 +534,28 @@ html {
                 }
 
                 .sub-section-header {
-                    display: block;
                     text-align: center;
-                    font-size: 2.5rem;
+                    font-size: 2rem;
                     font-weight: 900;
-                    line-height: 0;
-                    margin-top: 4rem;
+                    margin-top: 2rem;
+                    margin-bottom: 1rem;
 
                     &:hover {
                         animation: shake 0.5s;
                     }
-                    
+
                     @media (max-width: 480px) {
                         font-size: 2rem;
                         margin-top: 3rem;
                     }
+                }
+
+                .sub-section-header > span {
+                    color: $blueLightest;
+                    background-color: $blueDarkest;
+                    padding: 0.1rem 0.6rem 0.2rem 0.6rem;
+                    margin: 0;
+                    border-radius: 0.5rem;
                 }
 
                 .card {
@@ -636,10 +650,6 @@ html {
                                 font-weight: 400;
                             }
                         }
-
-                        &:first-child {
-                            margin-top: 0;
-                        }
                     }
                 }
 
@@ -668,7 +678,7 @@ html {
                 .links {
                     align-self: center;
 
-                    button>a>img {
+                    button > a > img {
                         background-color: $orangeDarkest;
                         border: unset;
                     }
