--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -381,6 +381,11 @@ html {
                                         padding: 0.2rem 0.3rem;
                                         border-radius: 0.2rem;
                                         border: 1px solid $greenDarkest;
+
+                                        &:hover {
+                                            background-color: $greenDarkest;
+                                            color: $greenLight;
+                                        }
                                     }
                                 }
 
@@ -414,11 +419,19 @@ html {
                                         display: inline;
                                         background-color: $greenDarkest;
                                         color: $greenLightest;
-                                        font-family: "Roboto Mono";
+                                        font-family: 'Roboto Mono';
                                         font-size: 0.75rem;
                                         padding: 0.2rem 0.5rem;
                                         margin: 0.1rem 0.1rem;
                                         border-radius: 0.7rem;
+                                        -webkit-font-smoothing: antialiased;
+
+                                        &:hover {
+                                            border: 1px solid $greenDarkest;
+                                            color: $greenDarkest;
+                                            background-color: $greenLight;
+                                            font-weight: 600;
+                                        }
                                     }
                                 }
                             }
@@ -747,11 +760,11 @@ html {
                 #footer-copyright {
                     text-align: center;
                     color: $orangeDarkest;
-                    
+
                     #heart {
                         line-height: 3rem;
                         height: 3rem;
-                        
+
                         &:hover {
                             display: inline-block;
                             font-size: 1.5rem;
