--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -1,4 +1,14 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Mono&family=Roboto+Slab:wght@500&display=swap");
+// Fonts
+
+@font-face {
+    font-family: 'Product Sans';
+    src: url("../fonts/Product Sans Regular.ttf");
+}
+
+@font-face {
+    font-family: 'Roboto Mono';
+    src: url("../fonts/RobotoMono.ttf");
+}
 
 // Colors
 
@@ -98,8 +108,7 @@ $orangeDarkest: #870000;
 }
 
 html {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
-        "Helvetica Neue", sans-serif;
+    font-family: "Product Sans";
     scroll-behavior: smooth;
 
     body {
@@ -256,7 +265,6 @@ html {
                         line-height: 0rem;
                         margin-top: 3rem;
                         margin-bottom: 3rem;
-                        font-family: "Roboto Slab", sans-serif;
                         text-transform: uppercase;
 
                         @media (max-width: 768px) {
@@ -285,10 +293,10 @@ html {
                             text-decoration: none;
 
                             div {
-                                display: inline-flex;
+                                display: flex;
                                 align-items: center;
                                 justify-content: center;
-                                padding: 0.5rem 0.5rem;
+                                padding: 0.5rem;
                                 color: $light;
                                 font-family: "Roboto Mono";
                                 font-size: 1.1rem;
@@ -419,7 +427,7 @@ html {
                                         display: inline;
                                         background-color: $greenDarkest;
                                         color: $greenLightest;
-                                        font-family: 'Roboto Mono';
+                                        font-family: "Roboto Mono";
                                         font-size: 0.75rem;
                                         padding: 0.2rem 0.5rem;
                                         margin: 0.1rem 0.1rem;
